<resources>
    <string name="app_name">SimpleAndYummy</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_grocery">Grocery</string>
    <string name="menu_settings">Settings</string>
    <string name="content_description_recipe_image">Recipe image</string>
    <string name="detail_back_button">Back button</string>
    <string name="detail_time_icon">Time icon</string>
    <string name="detail_about_this_meal">About this meal</string>
    <string name="detail_ingredients">Ingredients</string>
    <string name="detail_recipe">Recipe</string>
    <string name="ingredient_image">Ingredient image</string>
    <string name="detail_add_to_groceries">Add to Groceries</string>
    <string name="groceries">Groceries</string>
    <string name="grocery_delete_button">delete button</string>
    <string name="grocery_nothing_to_buy_here">Nothing to buy here</string>
    <string name="grocery_browse_recipes_to_add_new_ingredients">Browse recipes to add new ingredients</string>
    <string name="home_filter_button">filter button</string>
    <string name="home_search">Search</string>
    <string name="filter_apply">Apply</string>
    <string name="home_filter">Filter</string>
    <string name="filter_cuisine">Cuisine</string>
    <string name="filter_diet">Diet</string>
    <string name="filter_meal">Meal</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
</resources>